# C-Project2

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  project2
include/: functions.hpp  instructions.hpp  status.hpp
src/: functions.cpp  instructions.cpp  main.cpp
